CUDPP Change Log

Release 2.3
31 Aug 2016
- Release czar: Jason Mak. Thanks!
- Added cudppMultiSplit to split an array of elements into buckets
- SM architectures below 3.0 are no longer supported

Release 2.2
31 Aug 2014
- Release czar: Leyuan Wang. Thanks!
- Added cudppSuffixArray parallel skew algorithm for computing suffix array
- Replaced the cudppStringSort in burrowsWheelerTransform in cudppCompress
  with cudppSuffixArray to achieve better performance
- Fixed bugs in cudppMoveToFrontTransform where originally only inputs with
  value smaller than 15 work
- Fixed bugs to support cudppCompress to compress text containing all possible unsigned char values with the range of [1...255]
- Changed test files for cudppCompress and cudppMoveToFrontTransform to
  target the new BWT method
- Added -skiplargetests for MTF tests in order to avoid launch-timed-out errors
- Fixed bugs to make cudppStringSort compatible for compute capability less than 2.0
- Makefile fixes for OS X with clang compilation

Release 2.1
9 October 2013
- Release czar: Edmund Yan. Thanks!
- Added cudppCompress lossless data compression algorithms which implement
  the Move-to-Front transform, Burrows-Wheeler Transform, and
  Huffman encoding
- Added cudppMoveToFrontTransform and cudppBurrowsWheelerTransform
- Added cudppListRank parallel list ranking
- Renamed cudppSort to cudppRadixSort
- Added cudppMergeSort parallel merge sort
- Added cudppStringSort parallel string sort
- Moved source code to Github: http://cudpp.github.io
- Moved documentation pages from cudpp.h to README.md
- Added CUDPP_GENCODE_* CMake options to make CUDA target architecture compilation more flexible

Release 2.0
9 August 2011
- New thread-safe public interface -- requires creating a CUDPP instance
  with cudppCreate, and passing it to all functions
- Added cudppReduce parallel reductions
- Added cudppTridiagonal parallel tridiagonal linear system solver
- Added cudppHashTable parallel hash table data structure