@@ -56,21 +56,21 @@ set(GENCODE_SM35 -gencode=arch=compute_35,code=sm_35 -gencode=arch=compute_35,co
 
 #set(GENCODE -gencode=arch=compute_10,code=compute_10) # at least generate PTX
 
-option(CUDPP_GENCODE_SM12
-       "ON to generate code for Compute Capability 1.2 devices (e.g. GeForce GT 330M)"
-       OFF)
+#option(CUDPP_GENCODE_SM12
+#       "ON to generate code for Compute Capability 1.2 devices (e.g. GeForce GT 330M)"
+#       OFF)
 
-option(CUDPP_GENCODE_SM13
-       "ON to generate code for Compute Capability 1.3 devices (e.g. Tesla C1060)"
-       OFF)
+#option(CUDPP_GENCODE_SM13
+#       "ON to generate code for Compute Capability 1.3 devices (e.g. Tesla C1060)"
+#       OFF)
 
-option(CUDPP_GENCODE_SM20
-       "ON to generate code for Compute Capability 2.0 devices (e.g. Tesla C2050)"
-       ON)
+#option(CUDPP_GENCODE_SM20
+#       "ON to generate code for Compute Capability 2.0 devices (e.g. Tesla C2050)"
+#       OFF)
 
 option(CUDPP_GENCODE_SM30
        "ON to generate code for Compute Capability 3.0 devices (e.g. Tesla K10)"
-       OFF)
+       ON)
 
 option(CUDPP_GENCODE_SM35
        "ON to generate code for Compute Capability 3.5 devices (e.g. Tesla K20)"
